--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@types/ws": "^8.5.12",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0",
     "nodemon": "^2.0.16",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0"
   },
   "dependencies": {
     "@types/node": "^22.8.1",
