--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Template for the WebSocket remote control task",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev ./index.ts",
-    "start:dev": "nodemon ./index.ts",
+    "start": "npm run build && node dist/index",
+    "start:dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andrei Auchynnikau",
@@ -20,11 +20,12 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0"
-  },
-  "dependencies": {
+    "typescript-eslint": "^8.11.0",
     "@types/node": "^22.8.1",
     "dotenv": "^16.4.5",
+    "@types/nodemon": "^1.19.6"
+  },
+  "dependencies": {
     "ws": "^8.8.0"
   }
 }
