--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npm run build && node dist/index",
     "start:dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run clean && npx tsc"
+    "build": "npm run clean && npx tsc",
+    "clean": "rimraf dist && rimraf tsconfig.tsbuildinfo"
   },
   "author": "Andrei Auchynnikau",
   "keywords": [],
